--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^5.0.1",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/storage": "^23.3.1",
     "@react-native/new-app-screen": "0.81.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
