--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^7.4.8",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-contacts": "^8.0.7",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-permissions": "^5.4.2",
