--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,11 @@ android {
     }
 }
 
+configurations.all {
+    exclude group: 'com.android.support', module: 'support-compat'
+    exclude group: 'com.android.support', module: 'support-v4'
+}
+
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
