--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
     "react-native-sound": "^0.12.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "react-native-push-notification": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
